--- a/includes/options.twig
+++ b/includes/options.twig
@@ -3,12 +3,12 @@
 <label class="fontsampler-radio block">
     <input type="radio" name="use_default_options"
            value="1" {% if set.use_defaults == 1 %} checked="checked" {% endif %}>
-    <span>Use default settings</span>
+    <span>Use default options</span>
 </label>
 <label class="fontsampler-radio block">
     <input type="radio" name="use_default_options"
            value="0" {% if set.use_defaults == 0 %} checked="checked" {% endif %}>
-    <span>Use custom settings</span>
+    <span>Use custom options</span>
 </label>
 {% endif %}
 
