--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -5,6 +5,7 @@
                    data-default="{{ defaults[label] }}"
                    data-set="{{ set[label] }}"
                    value="1"
+                   class="fontsampler-checkbox-ui-block"
                     {% if set[label] == 1 %} checked="checked" {% endif %}>
             <span>{{ f.label }}</span>
         </label>
@@ -57,6 +58,7 @@
                    data-default="{{ defaults[label] }}"
                    data-set="{{ set[label] }}"
                    value="1"
+                   class="fontsampler-checkbox-ui-block"
                     {% if set[label] == 1 %} checked="checked" {% endif %}>
             <span>{{ description }}</span>
         </label>
