--- a/includes/set-edit.twig
+++ b/includes/set-edit.twig
@@ -95,182 +95,8 @@
 
 	{% include 'options.twig' %}
 
-	{##}
-	{#<h2>Interface options</h2>#}
-	{#<h3>Initial text</h3>#}
-	{#<div style="overflow: hidden;">#}
-		{#<div class="fontsampler-admin-column-half">#}
-			{#<label>#}
-				{#<span>The initial text displayed in the font sampler, for example the font name or pangram. You can use multi-line text here as well.</span><br>#}
-				{#<textarea name="initial" rows="5"#}
-				          {#dir="<?php echo ( ! isset( $set['is_ltr'] ) || $set['is_ltr'] == "1" ) ? 'ltr' : 'rtl'; ?>"><?php if ( ! empty( $set['initial'] ) ) : echo $set['initial']; endif; ?></textarea>#}
-			{#</label>#}
-		{#</div>#}
-		{#<div class="fontsampler-admin-column-half">#}
-			{#<p>Fontsampler script direction is:</p>#}
-			{#<label><input type="radio" name="is_ltr" value="1"#}
-					{#<?php if ( empty( $set['is_ltr'] ) || $set['is_ltr'] == "1" ) : echo 'checked="checked"'; endif; ?>>#}
-				{#<span>Left to Right</span></label>#}
-			{#<label><input type="radio" name="is_ltr" value="0"#}
-					{#<?php if ( isset( $set['is_ltr'] ) && $set['is_ltr'] == "0" ) : echo 'checked="checked"'; endif; ?>>#}
-				{#<span>Right to Left</span></label>#}
-		{#</div>#}
-	{#</div>#}
+	{% include 'partials/preview.twig' %}
 
-	{#<div style="overflow: hidden;">#}
-		{#<div class="fontsampler-options-checkbox">#}
-			{#<fieldset>#}
-				{#<legend>Common features</legend>#}
-
-				{#<label>#}
-					{#<input data-toggle-class="use-defaults" data-toggle-id="fontsampler-options-checkboxes" type="radio"#}
-					       {#name="default_features" value="1"#}
-						{#<?php if ( $set['default_features'] ): echo 'checked="checked"'; endif; ?>>#}
-					{#<span>Use default features</span>#}
-				{#</label>#}
-				{#<label>#}
-					{#<input data-toggle-class="use-defaults" data-toggle-id="fontsampler-options-checkboxes" type="radio"#}
-					       {#name="default_features" value="0"#}
-						{#<?php if ( ! $set['default_features'] ): echo 'checked="checked"'; endif; ?>>#}
-					{#<span>Select custom features</span>#}
-				{#</label>#}
-
-				{#<div id="fontsampler-options-checkboxes"#}
-				     {#class="<?php echo $set['default_features'] ? 'use-defaults' : ''; ?> ">#}
-					{#<?php#}
-					{#$options = $set;#}
-					{#include( 'fontsampler-options.php' );#}
-					{#?>#}
-				{#</div>#}
-			{#</fieldset>#}
-		{#</div>#}
-
-
-		{#<fieldset>#}
-			{#<legend>Links</legend>#}
-			{#<small>Leave the field empty to not include a buy or specimen button in the interface. Provide full URLs#}
-				{#starting with <code>http://</code>.#}
-				{#<br>#}
-				{#Note: You can also link to files, like PDFs.#}
-			{#</small>#}
-			{#<label>#}
-				{#<span class="input-description">"Buy" URL for this fontsampler:</span>#}
-				{#<input type="text" name="buy" class="fontsampler-admin-slider-label"#}
-				       {#value="<?php if ( isset( $set['buy'] ) ): echo $set['buy']; endif; ?>"/>#}
-			{#</label>#}
-			{#<label>#}
-				{#<span class="input-description">"Speciment" URL for this fontsampler:</span>#}
-				{#<input type="text" name="specimen" class="fontsampler-admin-slider-label"#}
-				       {#value="<?php if ( isset( $set['specimen'] ) ): echo $set['specimen']; endif; ?>"/>#}
-			{#</label>#}
-		{#</fieldset>#}
-	{#</div>#}
-
-	{#<h2>Interface layout</h2>#}
-
-	{#<div class="fontsampler-admin-column-wrapper">#}
-		{#<div class="fontsampler-admin-column-half">#}
-			{#<p>You can customize the layout of interface elements to differ from the defaults.#}
-				{#Simply hover any element, then <strong style="background: orange; ">DRAG &amp; DROP the orange#}
-					{#block</strong> into a new position.#}
-			{#</p>#}
-			{#<small>Only options you have enabled above will be available for sorting in this preview.</small>#}
-			{#<br>#}
-			{#<small>Note that the font displayed below is only a placeholders to render the interface.</small>#}
-		{#</div>#}
-		{#<div class="fontsampler-admin-column-half">#}
-			{#<div id="fontsampler-ui-layout-preview-options">#}
-				{#<p>You can select the Fontsamplers column layout here. The size of the Fontsampler always depends#}
-					{#on its container in the page layout, so Fontsamplers might have an different overall size when#}
-					{#rendered#}
-					{#in your site's theme. The columns work proportionally and scale with the Fontsampler's#}
-					{#container.</p>#}
-				{#<?php#}
-				{#if ( ! isset( $set['ui_columns'] ) ): $set['ui_columns'] = 3; endif;#}
-				{#?>#}
-				{#<label class="fontsampler-admin-label-block">#}
-					{#<input type="radio" value="1" name="ui_columns"#}
-						{#<?php if ( $set['ui_columns'] == 1 ) {#}
-							{#echo ' checked="checked" ';#}
-						{#} ?>>1 column#}
-					{#<small>(For mobile devices this will automatically be used as fallback)</small>#}
-				{#</label>#}
-				{#<label class="fontsampler-admin-label-block">#}
-					{#<input type="radio" value="2" name="ui_columns"#}
-						{#<?php if ( $set['ui_columns'] == 2 ) {#}
-							{#echo ' checked="checked" ';#}
-						{#} ?>>2 columns#}
-				{#</label>#}
-				{#<label class="fontsampler-admin-label-block">#}
-					{#<input type="radio" value="3" name="ui_columns"#}
-						{#<?php if ( $set['ui_columns'] == 3 ) {#}
-							{#echo ' checked="checked" ';#}
-						{#} ?>>3 columns#}
-				{#</label>#}
-				{#<label class="fontsampler-admin-label-block">#}
-					{#<input type="radio" value="4" name="ui_columns"#}
-						{#<?php if ( $set['ui_columns'] == 4 ) {#}
-							{#echo ' checked="checked" ';#}
-						{#} ?>>4 columns#}
-				{#</label>#}
-			{#</div>#}
-		{#</div>#}
-	{#</div>#}
-
-	{#<?php#}
-	{#$layout = new FontsamplerLayout();#}
-	{#?>#}
-
-	{#<div id="fontsampler-admin-ui-wrapper">#}
-		{#<input name="ui_order" type="hidden"#}
-		       {#value="<?php if ( ! empty( $set['ui_order'] ) ) :#}
-			       {#echo $layout->sanitizeString( $set['ui_order'], $set );#}
-		       {#else:#}
-			       {#echo $layout->arrayToString( $layout->getDefaultBlocks(), $set );#}
-		       {#endif; ?>">#}
-
-		{#<ul id="fontsampler-ui-blocks-list">#}
-
-			{#<?php#}
-			{#$blocks = array_merge( $layout->getDefaultBlocks(), $layout->stringToArray( $set['ui_order'], $set ) );#}
-
-			{#foreach ( $blocks as $item => $class ) : ?>#}
-				{#<li>#}
-					{#<div class="fontsampler-ui-block-overlay"#}
-					     {#data-item="<?php echo $item; ?>"#}
-					     {#data-default-class="<?php echo $layout->blocks[ $item ][0]; ?>">#}
-						{#<button class="fontsampler-ui-block-settings">#}
-							{#<img src="<?php echo plugin_dir_url( __FILE__ ); ?>../icons/settings.svg">#}
-						{#</button>#}
-						{#<div class="fontsampler-ui-block-options">#}
-							{#<button class="fontsampler-ui-block-add-break">Insert row break after</button>#}
-							{#<div class="fontsampler-ui-block-layout-classes">#}
-								{#<?php echo $layout->labels[ $item ]; ?> -block layout:#}
-								{#<?php foreach ( $layout->blocks[ $item ] as $cl ): ?>#}
-									{#<label><input type="radio"#}
-									              {#value="<?php echo $cl; ?>"#}
-									              {#data-target="<?php echo $item; ?>"#}
-									              {#name="layout_class_<?php echo $item; ?>"#}
-											{#<?php if ( $cl === $class ) {#}
-												{#echo ' checked="checked" ';#}
-											{#} ?>><span><?php echo $cl; ?></span>#}
-									{#</label>#}
-								{#<?php endforeach; ?>#}
-							{#</div>#}
-						{#</div>#}
-					{#</div>#}
-				{#</li>#}
-
-				{#<?php#}
-			{#endforeach;#}
-			{#?>#}
-		{#</ul>#}
-
-		{#<!-- gets populated with the actual fontsampler instance loaded via ajax -->#}
-		{#<div id="fontsampler-ui-layout-preview"></div>#}
-
-	{#</div>#}
-	{#<br>#}
 
 	{% if set.id is not empty %}
 		{{ submit_button('Save changes') }}
