--- a/includes/partials/options-features-slider.twig
+++ b/includes/partials/options-features-slider.twig
@@ -6,6 +6,7 @@
     {% if not settings %}
         <label class="fontsampler-radio">
             <input type="radio" name="{{ label }}_use_default" value="0"
+                   class="fontsampler-checkbox-ui-block"
                    {% if use_default %} checked="checked" {% endif %}>
         </label>
     {% endif %}
