saving style options fixed

--- a/admin/css/admin-preview.less
+++ b/admin/css/admin-preview.less
@@ -18,7 +18,7 @@
 
         // fontsampler UI sortable
         #fontsampler-ui-layout-preview {
-            border: 4px dotted @fs_color_light;
+            border: 4px solid @fs_color_light;
             padding: 10px;
 
             // sortable preview fontsamplers
