--- a/includes/partials/preview.twig
+++ b/includes/partials/preview.twig
@@ -41,9 +41,8 @@
 
 <div class="fontsampler-admin-column-wrapper">
     <div class="fontsampler-admin-column-half">
-        <p>You can customize the layout of interface elements to differ from the defaults.
-            Simply hover any element, then <strong style="background: orange; ">DRAG &amp; DROP the orange
-                block</strong> into a new position.
+        <p>Customize the layout of interface elements to differ from the defaults.
+            Simply hover any element, then drag and drop the block into a new position.
         </p>
         <small>Only options you have enabled above will be available for sorting in this preview.</small>
         <br>
@@ -51,10 +50,9 @@
     </div>
     <div class="fontsampler-admin-column-half">
         <div id="fontsampler-ui-layout-preview-options">
-            <p>You can select the Fontsamplers column layout here. The size of the Fontsampler always depends
-                on its container in the page layout, so Fontsamplers might have an different overall size when
-                rendered
-                in your site's theme. The columns work proportionally and scale with the Fontsampler's
+            <p>Select the Fontsamplers' column layout. The size of the Fontsampler always depends
+                on its container in the page layout, so Fontsamplers have an different overall size when
+                rendered in your site's theme. Columns scale proportionally with the Fontsampler's
                 container.</p>
 
             {# Include data-value for JS extraction, so the real value of the "default" can be null #}
