--- a/includes/settings.twig
+++ b/includes/settings.twig
@@ -8,6 +8,8 @@
 
 	{{ include('options.twig', { 'settings': true }) }}
 
+	{{ include('partials/preview.twig', { 'settings': true }) }}
+
 	<h2>Admin interface customizations</h2>
 	<label>
 		<input type="checkbox"
