--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -185,6 +185,17 @@
         color: @fs_color_delete;
     }
 
+    .fontsampler-num-notifications {
+        border-radius: 100%;
+        background: @fs_color_delete_light;
+        color: @fs_color_white;
+        display: inline-block;
+        height: 1.25em;
+        margin: 0 0 -0.25em 0.5em;
+        text-align: center;
+        width: 1.25em;
+    }
+
     ul.real-list {
         list-style: disc;
         margin: 0 0 0 2em;
