--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -183,7 +183,7 @@
             a {
                 box-shadow: none;
                 display: inline-block;
-                height: auto;
+                height: 100%;
                 width: auto;
                 text-decoration: none !Important;
 
