--- a/includes/partials/options-styles.twig
+++ b/includes/partials/options-styles.twig
@@ -9,7 +9,7 @@
 {{  include( 'partials/styles-color-field.twig', {
 	label: 'Background color',
 	name: 'css_color_background',
-	description: 'Color of the fontsampler background',
+	description: 'Color of the fontsampler text background',
 	value: set['css_color_background'],
 	default: defaults['css_color_background']
 }) }}
