--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -78,7 +78,7 @@
                     <div>
                         <label>
                             <span>Url for the buy link</span>
-                            <input type="text" name="buy" value="{{ set.buy }}_url">
+                            <input type="text" name="buy_url" value="{{ set.buy_url }}">
                         </label>
                     </div>
                 </div>
@@ -87,6 +87,7 @@
                     'header': 'Buy link UI',
                     'label': set.buy_label,
                     'image': set.buy_image,
+                    'type': set.buy_type,
                     'default_label': default.buy_label,
                     'default_image': defaults.buy_image,
                 }) }}
@@ -101,7 +102,7 @@
                     <div>
                         <label>
                             <span>Url for the specimen link</span>
-                            <input type="text" name="specimen" value="{{ set.specimen }}_url">
+                            <input type="text" name="specimen_url" value="{{ set.specimen_url }}">
                         </label>
                     </div>
                 </div>
@@ -110,6 +111,7 @@
                     'header': 'Specimen link UI',
                     'label': set.specimen_label,
                     'image': set.specimen_image,
+                    'type': set.specimen_type,
                     'default_label': default.specimen_label,
                     'default_image': defaults.specimen_image,
                 }) }}
